fixed double scrollbar

--- a/style.css
+++ b/style.css
@@ -59,7 +59,9 @@ body {
     width: 100%;
     height: 100vh;
 }
-
+.wrapper{
+    overflow: hidden;
+}
 
 
 
